Procfile and other changes added

--- a/templates/base_page_frame.html
+++ b/templates/base_page_frame.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.2, maximum-scale=1.2, user-scalable=no" />
-  <title>Easyplan Test</title>
+  <title>FullThrottle Labs Test</title>
   <link rel="stylesheet" type="text/css" href="{% static '/components/bootstrap/dist/css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static '/components/font-awesome/css/font-awesome.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static '/components/rdash-ui/dist/css/rdash.css' %}">
