Adding CSS for auto scroll

--- a/templates/home.html
+++ b/templates/home.html
@@ -196,6 +196,8 @@
                 top: 100%;
                 left: 0;
                 right: 0;
+                max-height: 300px;
+                overflow-y: auto;
             }
 
             .autocomplete-items div {
