--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 
                 <h2>Autocomplete</h2>
 
-                <p>Start typing:</p>
+                <p>Start typing: (minimum 4 letters)</p>
 
                 <!--Make sure the form has the autocomplete function switched off:-->
                 <form autocomplete="off" action="#">
