--- a/templates/home.html
+++ b/templates/home.html
@@ -29,12 +29,12 @@
                             } else {
                                 var xhttp = new XMLHttpRequest();
                                 xhttp.onreadystatechange = function () {
-                                    if (this.readyState == 4 && this.status == 200) {
+                                    {#if (this.readyState == 4 && this.status == 200) {#}
                                         // Typical action to be performed when the document is ready:
                                         {#document.getElementById("demo").innerHTML = xhttp.responseText;#}
                                         var obj = JSON.parse(xhttp.responseText);
                                         arr = obj['data'];
-                                    }
+                                    {# } #}
                                 };
                                 xhttp.open("GET", "/search/?q=" + val, true);
                                 xhttp.send();
